istio/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-opa-demo
  namespace: istio-opa-demo
  labels:
    istio-injection: enabled
